# Re-Co-Mobile

./: .gitmodules  README.md  sample.h
.github/workflows/: ci.yml
.history/reality_core/: pubspec_20220224163255.yaml  pubspec_20220319210431.yaml  pubspec_20220319211005.yaml
.history/reality_core/android/app/: build_20220422225319.gradle  build_20220422225335.gradle
.history/reality_core/lib/: main_20220408153109.dart  main_20220422233015.dart  signaling_20220408182153.dart  signaling_20220422221258.dart  signaling_20220422230346.dart  widget_20220422211152.dart  widget_20220422221257.dart  widget_20220422230338.dart
.history/reality_core/lib/Networking/: compression_20220301161602.dart  connection_20220301161603.dart  main_20220319132333.dart  main_20220406140318.dart  receving_20220301151050.dart  receving_20220301151832.dart  receving_20220301153021.dart  receving_20220301161554.dart  sending_20220301161538.dart
.history/reality_core/test/: widget_test_20220422232655.dart
FrontEnd/: README.md
reality_core/: CompileShaders.bat  README.md  pubspec.yaml
reality_core/.github/workflows/: ci.yml
reality_core/android/: build.gradle  settings.gradle
reality_core/android/app/: build.gradle  google-services.json
reality_core/android/unityLibrary/: build.gradle
reality_core/assets/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
reality_core/graphics_engine/: CMakeLists.txt
reality_core/graphics_engine/src/: engine.cpp  engine.hpp  export.cpp  export.hpp  firefly_compile.cpp  frag_spv.h  shader_code.hpp  vert_spv.h
reality_core/ios/Runner/: Info.plist
reality_core/ios/Runner.xcodeproj/: project.pbxproj
reality_core/lib/: main.dart  signaling.dart  splash.dart
reality_core/lib/Graphics/: README.md  camera.dart  engine.dart
reality_core/lib/Graphics/Backend/: buffer.dart  device.dart  deviceBoundObject.dart  deviceReference.dart  device_bound_object.dart  display.dart  displayBound.dart  display_bound.dart  graphicsPipeline.dart  graphics_pipeline.dart  image.dart  instance.dart  instance_bound_object.dart  offScreen.dart  off_screen.dart  oneTimeCommandBuffer.dart  one_time_command_buffer.dart  queue.dart  renderTarget.dart  shader.dart  swapchain.dart  utilities.dart
reality_core/lib/Graphics/engine_bindings/: engine.dart
reality_core/lib/ImageProcessing/: README.md
reality_core/lib/Networking/: README.md  main.dart  receving.dart
reality_core/lib/models/: faq_model.dart  user.dart
reality_core/lib/providers/: user_provider.dart
reality_core/lib/screens/: wrapper.dart
reality_core/lib/screens/auth/: auth.dart  auth_methods.dart  authenticate.dart  forgot_password.dart  register.dart  select_profile_pic.dart  signIn.dart  sign_in.dart
reality_core/lib/screens/home/: bottom_panel.dart  drawer.dart  edit_profile.dart  faq_page.dart  home.dart  (+4 more)
reality_core/lib/servises/: auth.dart
reality_core/lib/themes/: build_appBar.dart  cardView.dart  card_view.dart  form_themes.dart  loading.dart  splash_screen.dart
reality_core/scripts/: spirv_to_header.py
reality_core/test/: widget_test.dart
reality_core/web/: index.html  manifest.json
reality_core/windows/: CMakeLists.txt
reality_core/windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
